syntax = "proto3";

option csharp_namespace = "Funnel.Server";

package server;

service FunnelServer {
  rpc Funnel(stream FunneledResponse) returns (stream FunneledRequest);
}

message FunneledRequest {
  string id = 1;
  optional string body = 2;
  map<string, string> headers = 3;
  map<string, string> query = 4;
  string method = 5;
  string path = 6;
}

message FunneledResponse {
  string id = 1;
  string clientId = 2;
  optional string body = 3;
  map<string, string> headers = 4;
  int32 status = 5;
}